# BlissInterface

./: .appveyor.yml  .codecov.yml  .gitattributes  .gitignore  .travis.yml  BlissInterface.la  LICENSE  Makefile.am  Makefile.in  PackageInfo.g  README.md  aclocal.m4  compiler_questions.txt  config.status  configure  configure.ac  init.g  install.sh  libtool  makedoc.g  prerequisites.sh  read.g
.libs/: BlissInterface.la  BlissInterface.lai
_data/: package.yml
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
cnf/: pkgconfig.h.in~
doc/: BlissInterface.xml  _AutoDocMainFile.xml  _Chapter_Description.xml  _Chapter_Functionality.xml  _Chapter_Introduction.xml  _Chapter_Usage_of_the_package.xml  bib.xml  bib.xml.bib  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chapBib.html  chapBib.txt  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  title.xml
gap/: BlissInterface.gd  BlissInterface.gi  NautyInterface.gd  NautyInterface.gi  examples.autodoc  interfaces.gd  interfaces.gi  intro.autodoc
src/: BlissInterface.cc  BlissInterface.hh  BlissInterface_la-BlissInterface.lo  _pkgconfig.h  stamp-h1
src/.deps/: BlissInterface_la-BlissInterface.Plo
src/bliss-0.73/: BlissInterface_la-defs.lo  BlissInterface_la-graph.lo  BlissInterface_la-heap.lo  BlissInterface_la-orbit.lo  BlissInterface_la-partition.lo  BlissInterface_la-timer.lo
src/bliss-0.73/.deps/: BlissInterface_la-defs.Plo  BlissInterface_la-graph.Plo  BlissInterface_la-heap.Plo  BlissInterface_la-orbit.Plo  BlissInterface_la-partition.Plo  BlissInterface_la-timer.Plo  BlissInterface_la-utils.Plo
tst/: bliss_test.g  blissinterface.tst  blissinterface_32bit.tst  blissinterface_64bit.tst  clif_test.g  interfaces_64bit.tst  nauty_test.g  nautyinterface_32bit.tst  paley_test.g  testall.g
